[package]
name = "anvil"
version = "0.1.0"
edition = "2021"
description = "Dead simple CLI Anvil file format parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
anyhow = "1.0.68"
atty = "0.2.14"
flate2 = "1.0.25"